--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@
 /trans_matrix
 /practice.c
 /practice
+/str_sequence
+/str_sort
+/arr_strcmp
+/arr_binarysearch
+/arr_linearsearch
+/arr_stringoperations
+/str_freq_occ
+/str_freq_occ2
+/str_palindrome
