--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 /str_freq_occ
 /str_freq_occ2
 /str_palindrome
+/arr_find-substring
+/arr_index-pattern-str
+/arr_str-insert-operation
+/arr_naive-pattern-searching
+/arr_naive-pattern-searching
